--- a/.travis.yml
+++ b/.travis.yml
@@ -19,142 +19,152 @@ cache:
 matrix:
   include:
     - php: 5.6
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_26_STABLE
         MOODLE_CI_VERSION=1
     - php: 5.6
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_26_STABLE
         MOODLE_CI_VERSION=1
     - php: 5.6
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_27_STABLE
         MOODLE_CI_VERSION=1
     - php: 5.6
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_27_STABLE
         MOODLE_CI_VERSION=1
     - php: 5.6
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_28_STABLE
         MOODLE_CI_VERSION=1
     - php: 5.6
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_28_STABLE
         MOODLE_CI_VERSION=1
     - php: 5.6
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_29_STABLE
         MOODLE_CI_VERSION=1
     - php: 5.6
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_29_STABLE
         MOODLE_CI_VERSION=1
     - php: 5.6
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_30_STABLE
         MOODLE_CI_VERSION=1
     - php: 5.6
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_30_STABLE
         MOODLE_CI_VERSION=1
     - php: 5.6
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_31_STABLE
         MOODLE_CI_VERSION=1
     - php: 5.6
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_31_STABLE
         MOODLE_CI_VERSION=1
     - php: 7.1
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_32_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_32_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_33_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_33_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_34_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_34_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_35_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_35_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_36_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_36_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_37_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_37_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=MOODLE_38_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.1
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=MOODLE_38_STABLE
+        MOODLE_CI_VERSION=2
+    - php: 7.1
+      env:
+        DB=pgsql
+        MOODLE_BRANCH=MOODLE_39_STABLE
+        MOODLE_CI_VERSION=2
+    - php: 7.1
+      env:
+        DB=mysqli
+        MOODLE_BRANCH=MOODLE_39_STABLE
         MOODLE_CI_VERSION=2
     - php: 7.2
-      env: 
+      env:
         DB=pgsql
         MOODLE_BRANCH=master
         MOODLE_CI_VERSION=2
     - php: 7.2
-      env: 
+      env:
         DB=mysqli
         MOODLE_BRANCH=master
         MOODLE_CI_VERSION=2
@@ -173,11 +183,11 @@ before_install:
 install:
   - if [[ $MOODLE_CI_VERSION == 1 ]];
     then
-      if [ -n $GITHUB_APITOKEN ]; then
-        cd ci;
-        composer config -g github-oauth.github.com $GITHUB_APITOKEN;
-        cd ..;
-      fi
+    if [ -n $GITHUB_APITOKEN ]; then
+    cd ci;
+    composer config -g github-oauth.github.com $GITHUB_APITOKEN;
+    cd ..;
+    fi
     fi
 
   - moodle-plugin-ci install
@@ -190,9 +200,9 @@ script:
   - moodle-plugin-ci validate
   - if [[ $MOODLE_CI_VERSION == 2 ]];
     then
-      moodle-plugin-ci savepoints;
-      moodle-plugin-ci mustache;
-      moodle-plugin-ci grunt;
+    moodle-plugin-ci savepoints;
+    moodle-plugin-ci mustache;
+    moodle-plugin-ci grunt;
     fi
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
