--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nhsla/moodle-mod_journal",
+    "name": "nhsla/mod_journal",
     "description": "Leadership Academy version of Moodle Jorunal Plugin.",
     "type": "moodle-mod",
     "license": "OGL"
