--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "nhsla/journal",
-    "description": "Leadership Academy version of Moodle Jorunal Plugin.",
+    "description": "Leadership Academy version of Moodle Journal Plugin.",
     "type": "moodle-mod",
     "license": "OGL"
 }
